// Copyright 2019 Luis Guill√©n Civera <luisguillenc@gmail.com>. View LICENSE.

syntax = "proto3";

import "github.com/luids-io/api/schemas/dnsutil/common.proto";

package luids.dnsutil.v1;
option go_package = "github.com/luids-io/api/dnsutil/grpc/pb";

service Archive {
    rpc SaveResolv (SaveResolvRequest) returns (SaveResolvResponse) {}
}

message SaveResolvRequest {
    ResolvData resolv = 1;
}

message SaveResolvResponse {
    string id = 1;
}

